# cpp-my-rest-app

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt
app/libs/: CMakeLists.txt
app/libs/include/rest/: dummy.hpp
app/libs/include/rest/core/: RestServer.hpp
app/libs/src/: RestServer.cpp  dummy.cpp
app/main/: CMakeLists.txt  main.cpp
docs/: api.yaml
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_core.cpp  test_main.cpp
